--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ RUN pip install gunicorn==20.1.0
 COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . .
+# ахтунг! Для киттиграма исправить "backend.wsgi" на "kittygram_backend.wsgi"!
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
